--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="PeiFirstWebpage">
+    <meta name="author" content="Pei">
 
-    <title>Stylish Portfolio Template for Bootstrap</title>
+    <title>Pei Films</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -43,11 +43,11 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
         <div class="vert-text">
-            <h1>Start Bootstrap</h1>
+            <h1>Hello</h1>
             <h3>
-                <em>We</em> Build Great Templates,
-                <em>You</em> Make Them Better</h3>
-            <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
+                <em>I</em> nmmmm,
+                <em>You</em> hahahaaaa</h3>
+
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
